Fix typo found in index table footnotes

--- a/100-math-description/GR-sslcm-math-description.Rmd
+++ b/100-math-description/GR-sslcm-math-description.Rmd
@@ -550,7 +550,7 @@ footnote_key = c(
   "3" = "``Age'' refers to the total age, i.e., the number of winters experienced post-spawning including the winter spent as an egg. For example, eggs fertilized in brood year 2000 are age-0 until they hatch in spring of 2001 (age-1), migrate to sea in spring/summer of 2002 (age-2), and return to spawn in one of 2003 (age-3), 2004 (age-4), or 2005 (age-5). $k=1$ is the first age of maturation (age-3) and $k=3$ is the last age of maturation (age-5).",
   "4" = "``Migratory strategy'' refers to the timing of migration from headwaters rearing areas -- some fish (fall migrants) migrate out in the fall at age-1 and spend the winter downstream whereas others stay and migrate out at age-2 (spring migrants). Regardless of this migratory strategy, all fish make the seaward out-of-basin migration at age-2.",
   "5" = "``Origin'' refers to the type of spawning that produced the fish in question: natural-origin (NOR) are fish that were spawned in the wild and hatchery-origin (HOR) are fish that were spawned in a hatchery setting.",
-  "6" = "Most quantities treat age ($k$) and origin ($o$) as two separate dimensions of a larger array. However, for fitting to compositional data by age and origin, we collapse these two dimensions into one such that a single vector of proportions can represent the composition by age and origin. $k \\\\in [1,2,3]$ represents age-3, age-4, and age-5 for natural-origin fish, respectively, and $k \\\\in [4,5,6]$ represents these same ages for hatchery-origin fish, respectively."
+  "6" = "Most quantities treat age ($k$) and origin ($o$) as two separate dimensions of a larger array. However, for fitting to compositional data by age and origin, we collapse these two dimensions into one such that a single vector of proportions can represent the composition by age and origin. $ko \\\\in [1,2,3]$ represents age-3, age-4, and age-5 for natural-origin fish, respectively, and $ko \\\\in [4,5,6]$ represents these same ages for hatchery-origin fish, respectively."
 )
 
 # add footnote symbols where appropriate
