Switch output type to bookdown::pdf_document2

--- a/100-math-description/GR-sslcm-math-description.Rmd
+++ b/100-math-description/GR-sslcm-math-description.Rmd
@@ -2,7 +2,7 @@
 title: "\\textsc{Mathematical Description}"
 subtitle: "\\textsc{State-Space Life Cycle Model for Grande Ronde Spring Chinook Salmon}"
 output: 
-  pdf_document:
+  bookdown::pdf_document2:
     keep_tex: false
     toc: true
     toc_depth: 3
